--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -25,6 +26,7 @@
     "dompurify": "^3.2.5",
     "express": "^5.1.0",
     "framer-motion": "^10.12.16",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.487.0",
     "marked": "^15.0.8",
     "next": "^15.3.0",
@@ -43,7 +45,7 @@
     "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.0",
     "viem": "^2.27.2",
-    "wagmi": "^1.3.0",
+    "wagmi": "^2.14.16",
     "web3": "^4.16.0"
   },
   "devDependencies": {
