--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-switch": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@radix-ui/react-switch": "^1.0.3",
     "axios": "^1.8.4",
     "bignumber.js": "^9.2.1",
     "body-parser": "^2.2.0",
-    "bufferutil": "^4.0.7",
     "chart.js": "^4.4.9",
-    "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dompurify": "^3.2.5",
+    "ethers": "5.7.2",
     "express": "^5.1.0",
     "framer-motion": "^10.12.16",
     "html2canvas": "^1.4.1",
@@ -38,14 +37,14 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^4.12.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.2",
     "remark-gfm": "^4.0.1",
     "tailwind-variants": "^1.0.0",
-    "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.0",
     "viem": "^2.27.2",
-    "wagmi": "^2.14.16",
+    "wagmi": "0.12.10",
     "web3": "^4.16.0"
   },
   "devDependencies": {
