🚀 Final production build for Netlify

--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@radix-ui/react-switch": "^1.0.3",
+    "@wagmi/core": "^2.17.1",
     "axios": "^1.8.4",
     "bignumber.js": "^9.2.1",
     "body-parser": "^2.2.0",
     "chart.js": "^4.4.9",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dompurify": "^3.2.5",
-    "ethers": "5.7.2",
+    "ethers": "^5.8.0",
     "express": "^5.1.0",
     "framer-motion": "^10.12.16",
     "html2canvas": "^1.4.1",
@@ -43,12 +45,12 @@
     "remark-gfm": "^4.0.1",
     "tailwind-variants": "^1.0.0",
     "uuid": "^9.0.0",
-    "viem": "^2.27.2",
-    "wagmi": "0.12.10",
+    "viem": "^2.29.0",
+    "wagmi": "^1.4.13",
     "web3": "^4.16.0"
   },
   "devDependencies": {
-    "@types/node": "^20.6.0",
+    "@types/node": "^20.17.41",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
